force-app/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Result_Normal_Range__c.field-meta.xml
<CustomField>
    <fullName>Result_Normal_Range__c</fullName>
    <label>Result Normal Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>