force-app/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Result_Status__c</fullName>
    <label>Result Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>